# tauri-sysmon

./: index.html  package-lock.json  package.json  tsconfig.json
src/: App.css  App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  models.rs  utils.rs  window_state.rs
src/components/: OverviewComponent.tsx  ProcsTableComponent.tsx
src/models/: DisksInfo.ts  NetworkInterfaceInfo.ts  OverviewData.ts  ProcessInfo.ts
