[package]
name = "tauri-sysmon"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_sysmon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints.rust]
linker_messages = "allow"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = "0.4.45"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sysinfo = "0.39.5"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-opener = "2.5.4"
tauri-plugin-store = "2.4.3"
whoami = "2.1.2"

[target.'cfg(not(target_os = "windows"))'.dependencies]
users = "0.11.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Devices_WiFi",
    "Networking_Connectivity",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_Security_Authorization"
] }
